# forecast-earnings

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed_data/full/: energy.csv  price.csv
data/processed_data/train_test/: energy.csv  price.csv  spot_price.csv
data/processed_data/validate/: energy.csv  price.csv  spot_price.csv
data/raw_data/: energy.csv  spot_price.csv
example_predictions/: energy_predictions.csv  price_predictions.csv
example_results/: energy_predictions.csv  price_predictions.csv
forecaster/: __main__.py  create_features.py  quantile_forest.py  utils.py
instances/: example_inputs.toml  inputs.toml
notebooks/: basic_fit.ipynb  clean_input_dataset.ipynb  explore_data.ipynb  projected_earnings.ipynb  validation.ipynb
predictions/: energy_predictions.csv  price_predictions.csv
predictions_directory/: energy_predictions.csv  price_predictions.csv
results_test/: energy_predictions.csv  price_predictions.csv
results_validation/: energy_predictions.csv  price_predictions.csv
