[tool.poetry]
name = "testsmartenergy"
version = "0.0.1"
description = ""
authors = ["Miguel Manuel de Villena <m.manueldevillena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
quantile-forest = "^1.1.2"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.264"
pytest = "^7.3.1"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core^1.4.0"]
build-backend = "poetry.core.masonry.api"
